# founder-retention-expansion-os

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: company_profile.yml  scoring_rules.yml
data/: README.md  sample_customer_accounts.csv
docs/: customer-health-tracker-template.md  founder-use-case.md  how-to-fork-and-use.md  operating-rhythm.md  scoring-methodology.md  where-this-fits-in-founder-os.md
outputs/: account_score_explanations.csv  churn_driver_summary.csv  customer_health_scorecard.csv  customer_proof_opportunities.csv  expansion_opportunity_queue.csv  founder_attention_queue.csv  founder_retention_memo.md  renewal_risk_queue.csv  retention_expansion_operating_review.md
prompts/: churn_driver_analysis_prompt.md  executive_touch_prompt.md  expansion_readiness_prompt.md  retention_risk_review_prompt.md
src/founder_retention_expansion/: __init__.py  actions.py  cli.py  config.py  expansion.py  health.py  ingest.py  reporting.py  retention.py  scoring.py  utils.py
tests/: test_actions.py  test_expansion.py  test_health.py  test_ingest.py  test_reporting.py  test_retention.py  test_scoring.py
